Replace Jetty 10 with Prometheus HttpServer